--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name=mvcEx
+spring.application.name=board
 
-server.port=8085
+
+
+server.port=8086
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
@@ -8,10 +10,10 @@ spring.datasource.username=c##idev
 spring.datasource.password=1234
 # mybatis setting
 mybatis.mapper-locations=mapper/*.xml
-mybatis.type-aliases-package=org.iclass.mvcEx.dto
+mybatis.type-aliases-package=org.iclass.board.dto
 
 #log level setting
-logging.level.org.iclass.mvcEx=debug
+logging.level.org.iclass.board=debug
 
 # file upload setting
 spring.servlet.multipart.max-file-size=10MB
