--- a/restApi/src/main/resources/application.properties
+++ b/restApi/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=mvcEx
+spring.application.name=restApi
 
-server.port=8085
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
@@ -8,11 +7,4 @@ spring.datasource.username=c##idev
 spring.datasource.password=1234
 # mybatis setting
 mybatis.mapper-locations=mapper/*.xml
-mybatis.type-aliases-package=org.iclass.mvcEx.dto
-
-#log level setting
-logging.level.org.iclass.mvcEx=debug
-
-# file upload setting
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=100MB
+mybatis.type-aliases-package=org.iclass.rest.dto
